Add unit tests and integration tests